webserver/03/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cltrke
  labels:
    app.kubernetes.io/name: cltrke
    app.kubernetes.io/part-of: cltrke
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: cltrke
      app.kubernetes.io/part-of: cltrke
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cltrke
        app.kubernetes.io/part-of: cltrke
    spec:
      containers:
      - name: cltrke
        image: monachus/rancher-demo
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "0.1"
            memory: 32Mi
