webserver/03/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cltrke
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cltrke.labtriunesp.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cltrke
            port:
              number: 80
